Adds MainPane and SplashScreen using JavaFX.